# mathlib

./: CMakeLists.txt  README.md
include/geometry/: funcs.h  funcs.inl
include/matrix/: mat.h  mat3x3.h  mat3x3.inl  mat4x4.h  mat4x4.inl
include/scalars/: scalar.h  scalar.inl
include/vectors/: funcs.h  funcs.inl  vec.h  vec3.h  vec3.inl  vec4.h
lamath/: lamath.h
lamath/detail/: base_types.h
lamath/geometry/: funcs.h  funcs.inl
lamath/matrix/: funcs.h  funcs.inl  mat.h  mat4x4.h  mat4x4.inl
lamath/scalars/: scalar.h
lamath/vectors/: funcs.h  funcs.inl  vec.h  vec3.h  vec3.inl  vec4.h  vec4.inl
mathlib/: mathlib.h
mathlib/detail/: base_types.h
mathlib/geometry/: funcs.h  funcs.inl
mathlib/matrix/: mat.h  mat4x4.h  mat4x4.inl
mathlib/scalars/: scalar.h
mathlib/vectors/: funcs.h  vec3.h  vec3.inl  vec4.h  vec4.inl
test/: helpers.cc  helpers.h  mat4_test.cc  vec3_test.cc  vec4_test.cc
test/geometry/: geo_test.cc
test/helpers/: helpers.cc  helpers.h
test/matrix/: mat3_test.cc  mat4_test.cc
test/vectors/: vec3_test.cc  vec4_test.cc
